--- a/ci/docker/nginx-jar/nginx.conf
+++ b/ci/docker/nginx-jar/nginx.conf
@@ -13,11 +13,11 @@ server {
             proxy_set_header        Host            $host;
             proxy_set_header        X-Real-IP       $remote_addr;
             proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-            client_max_body_size    10m;
+            client_max_body_size    10M;
             client_body_buffer_size 128k;
             proxy_connect_timeout   90;
             proxy_send_timeout      90;
-            proxy_read_timeout      90;
+            proxy_read_timeout      3600;
             proxy_buffers           32 4k;
     }
 
