tg-6498 [BD] Agregar columna 'event' a tabla 'dosage'

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_35.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_35.yml
@@ -144,3 +144,14 @@ databaseChangeLog:
                     name: description
                     type: text
 
+    - changeSet:
+        id: add-column-event-dosage
+        author: mvenere
+        changes:
+          - addColumn:
+              tableName: dosage
+              columns:
+                - column:
+                    name: event
+                    type: varchar(100)
+
