--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_35.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_35.yml
@@ -333,3 +333,52 @@ databaseChangeLog:
               referencedTableName: dosage
               validate: true
 
+    - changeSet:
+        id: other_pharmaco-createTable
+        comment: Create table other_pharmaco
+        author: mvenere
+        changes:
+          - createTable:
+              tableName: other_pharmaco
+              columns:
+                - column:
+                    autoIncrement: true
+                    constraints:
+                      primaryKey: true
+                      primaryKeyName: PK_other_pharmaco
+                    name: id
+                    type: int
+                - column:
+                    constraints:
+                      nullable: false
+                    name: indication_id
+                    type: int
+                - column:
+                    constraints:
+                      nullable: false
+                    name: snomed_id
+                    type: int
+                - column:
+                    constraints:
+                      nullable: false
+                    name: dosage_id
+                    type: int
+          - addForeignKeyConstraint:
+              baseColumnNames: snomed_id
+              baseTableName: other_pharmaco
+              constraintName: FK_other_pharmaco_snomed_id
+              referencedColumnNames: id
+              referencedTableName: snomed
+          - addForeignKeyConstraint:
+              baseColumnNames: indication_id
+              baseTableName: other_pharmaco
+              constraintName: FK_other_pharmaco_indication_id
+              referencedColumnNames: id
+              referencedTableName: indication
+          - addForeignKeyConstraint:
+              baseColumnNames: dosage_id
+              baseTableName: other_pharmaco
+              constraintName: FK_other_pharmaco_dosage_id
+              referencedColumnNames: id
+              referencedTableName: dosage
+              validate: true
