tg-6564 [BD] Agregar tipo de documento "Indicacion"

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_35.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_35.yml
@@ -382,3 +382,13 @@ databaseChangeLog:
               referencedColumnNames: id
               referencedTableName: dosage
               validate: true
+
+    - changeSet:
+        id: add-new-document-type
+        comment: Agregar nuevo tipo de documento
+        author: mvenere
+        context: "!schema-only"
+        changes:
+          - sql:
+              sql: |-
+                INSERT INTO document_type (id, description) VALUES(12, 'Indicación');
