tg-6557 [DB] Crear vista v_snomed_group_concept

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_35.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_35.yml
@@ -615,7 +615,7 @@ databaseChangeLog:
               columnNames: snomed_id, group_id
               constraintName: UQ_snomed_id_group_id
               tableName: snomed_related_group
-              
+
     - changeSet:
         id: add-institution_id-column-snomed_group
         comment: Add column institution_id to snomed_group table
@@ -693,3 +693,19 @@ databaseChangeLog:
                     defaultValue: false
                     constraints:
                       nullable: false
+
+    - changeSet:
+        id: v_snomed_group_concept-createView
+        comment: Create v_snomed_group_concept view
+        author: tmedina
+        changes:
+          - createView:
+              viewName: v_snomed_group_concept
+              fullDefinition: false
+              replaceIfExists: true
+              selectQuery: |-
+                SELECT srg.id as id, s.id AS concept_id, sg.id AS group_id, s.sctid AS concept_sctid, s.pt AS concept_pt,
+                    srg.orden AS orden, srg.last_update as last_update, srg.id as snomed_related_group_id
+                FROM snomed_group sg
+                JOIN snomed_related_group srg ON (sg.id = srg.group_id)
+                JOIN snomed s ON (srg.snomed_id = s.id);
