tg-6584 Optimiza consulta sobre pacientes

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_34.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_34.yml
@@ -132,3 +132,30 @@ databaseChangeLog:
               referencedColumnNames: id
               referencedTableName: department
               validate: true
+
+    - changeSet:
+          id: createIndexFirstName-person
+          author: bchacon
+          dbms: postgresql
+          changes:
+              - sql:
+                    sql: |-
+                        CREATE INDEX "IDX_person_first-name" ON person (UPPER(first_name));
+                        
+    - changeSet:
+          id: createIndexLastName-person
+          author: bchacon
+          dbms: postgresql
+          changes:
+              - sql:
+                    sql: |-
+                        CREATE INDEX "IDX_person_last-name" ON person (UPPER(last_name));
+                        
+    - changeSet:
+          id: createIndexIdentificationNumber-person
+          author: bchacon
+          dbms: postgresql
+          changes:
+              - sql:
+                    sql: |-
+                        CREATE INDEX "IDX_person_identification-number" ON person (identification_number);
