tg-6637 [BE/BD] Modificar indicationDate a solo fecha

--- a/back-end/app/src/main/resources/db/changelog/incrementales-v1_35.yml
+++ b/back-end/app/src/main/resources/db/changelog/incrementales-v1_35.yml
@@ -444,3 +444,14 @@ databaseChangeLog:
                     name: created_on
                     type: datetime
                     defaultValueDate: ${date.now}
+                
+    - changeSet:
+        id: indication-update-indication_date
+        author: mvenere
+        comment: Actualizar type de la columna indication_date
+        context: "!schema-only"
+        changes:
+          - modifyDataType:
+              columnName: indication_date
+              newDataType: date
+              tableName: indication
